# sailor-r2

./: pyproject.toml  setup_cluster.sh  train.py
configs/: defaults.yaml
experiments/: train_left_gymhil.sh
sailor/: configs.yaml
sailor_r2/: __init__.py  adapter.py  config.py  cost_functions.py  critic.py  discriminator.py  dreamer_class.py  imag_behavior.py  reliability.py  sailor_trainer.py  trainer_utils.py  world_model.py
sailor_r2/classes/: __init__.py
sailor_r2/policies/: __init__.py
sailor_r2/r2d/: __init__.py  tools.py
sailor_r2/r2d/optim/: __init__.py
